log
Sat Mar 19 19:30:54 UTC 2022: 
 list.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:25: error: ‘List {aka struct List}’ has no member named ‘Head’; did you mean ‘head’?
   list->current = list->Head;
                         ^~~~
                         head
list.c: In function ‘nextList’:
list.c:45:21: error: ‘Node {aka struct Node}’ has no member named ‘Next’; did you mean ‘next’?
   if(list->current->Next != NULL)
                     ^~~~
                     next
Compilation failed
0fe323e
Sat Mar 19 19:31:19 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
46de9ec
Sat Mar 19 19:33:07 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:23: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list->current = list.head;
                       ^
                       ->
Compilation failed
1c57f12
Sat Mar 19 19:33:21 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fc34481
Sat Mar 19 19:33:29 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
25bc6ee
Sat Mar 19 19:40:20 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20274a7
Sat Mar 19 19:41:57 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
3ef7629
Sat Mar 19 19:42:15 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 15/70
196cc64
Sat Mar 19 19:43:39 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
d148523
Sat Mar 19 19:45:34 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
1d4a821
Sat Mar 19 19:53:42 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9a49537
Sat Mar 19 19:55:54 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
753eccc
Sat Mar 19 19:56:43 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
3afc2f9
Sat Mar 19 19:59:27 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
27b4cbd
Sat Mar 19 20:00:43 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
3d03cb9
Sat Mar 19 20:04:02 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
41646b0
